--- a/frontend/src/components/ui/ModalProvider/ModalProvider.module.scss
+++ b/frontend/src/components/ui/ModalProvider/ModalProvider.module.scss
@@ -1,7 +1,25 @@
 .Backdrop {
-
-  .Container {}
+  position: fixed;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.45);
+  backdrop-filter: blur(6px);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition-property: opacity, visibility;
 }
 
+.Container {
+  // from old project
+  //@apply justify-center flex overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none;
+  //  margin-top: 15%;
+}
 
-.BackdropAnimateIn {}
+.BackdropAnimateIn {
+  visibility: visible;
+  opacity: 1;
+}
