--- a/frontend/src/components/ui/Button/Button.module.scss
+++ b/frontend/src/components/ui/Button/Button.module.scss
@@ -1,1 +1,3 @@
-.Container {}
+.Container {
+  @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm bg-primary text-sm font-medium text-white;
+}
