--- a/frontend/src/components/pages/Login/Login.module.scss
+++ b/frontend/src/components/pages/Login/Login.module.scss
@@ -1,23 +1,28 @@
 .Container {
-  @apply min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8;
+  @apply min-h-full flex flex-col justify-center py-12 sm:px-6 lg:px-8 mt-12;
 
   .Header {
     @apply sm:mx-auto sm:w-full sm:max-w-md;
     img {
       @apply mx-auto h-12 w-auto;
     }
-
     h2 {
       @apply mt-6 text-center text-3xl font-extrabold text-gray-900;
     }
 
     p {
-      @apply mx-auto text-accent text-center;
+      @apply mx-auto text-accent text-center text-sm;
     }
   }
 
   form {
     @apply space-y-6 mt-2 sm:mx-auto sm:w-full sm:max-w-md bg-white py-8 px-4  sm:rounded-lg sm:px-10;
+    input {
+      @apply focus:border-graySecondary;
+    }
+    button {
+      @apply hover:bg-graySecondary;
+    }
   }
 
   .Actions {
@@ -26,7 +31,7 @@
       @apply text-sm;
 
       a {
-        @apply font-medium text-textLight;
+        @apply font-medium text-textLight hover:text-graySecondary;
       }
     }
   }
