--- a/frontend/src/components/ui/LayoutProvider/LayoutProvider.module.scss
+++ b/frontend/src/components/ui/LayoutProvider/LayoutProvider.module.scss
@@ -1,7 +1,9 @@
 .Container {
-
   main {
-    //@apply flex-1 relative z-0 flex overflow-hidden;
-    //@apply flex-1 relative overflow-y-auto;
+    @apply flex-1;
+
+    .Content {
+      @apply max-w-7xl mx-auto px-4 sm:px-6 md:px-8;
+    }
   }
 }
