--- a/frontend/src/components/pages/Register/Register.module.scss
+++ b/frontend/src/components/pages/Register/Register.module.scss
@@ -16,6 +16,13 @@
     }
   }
 
+  .ErrorContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
   form {
     @apply space-y-6 mt-2 sm:mx-auto sm:w-full sm:max-w-md bg-white py-8 px-4  sm:rounded-lg sm:px-10;
     input {
