--- a/frontend/src/components/ui/SideMenu/Profile/Profile.module.scss
+++ b/frontend/src/components/ui/SideMenu/Profile/Profile.module.scss
@@ -1,5 +1,5 @@
 .Container {
-  @apply flex-shrink-0 flex bg-gray-700 p-4 flex flex-col;
+  @apply flex-shrink-0 flex p-4 flex flex-col bg-grayMenu;
 
   button {
     @apply w-full;
