--- a/frontend/src/components/ui/OfficeRoom/OfficeRoom.module.scss
+++ b/frontend/src/components/ui/OfficeRoom/OfficeRoom.module.scss
@@ -1,4 +1,4 @@
-.Office {
+.Container {
   display: inline-grid;
   box-shadow: #CCDBE8 3px 3px 6px 0 inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
   background-color: #EEEEEE;
