--- a/frontend/src/components/ui/Button/Button.module.scss
+++ b/frontend/src/components/ui/Button/Button.module.scss
@@ -1,3 +1,3 @@
 .Container {
-  @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm bg-primary text-sm font-medium text-white;
+  @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm bg-primary text-sm font-medium text-white hover:bg-graySecondary disabled:bg-graySecondary disabled:cursor-not-allowed disabled:transform-none;
 }
