--- a/frontend/src/components/pages/Home/Home.module.scss
+++ b/frontend/src/components/pages/Home/Home.module.scss
@@ -1,9 +1,10 @@
-.Cointainer {
+.Container {
   display: flex;
   width: 50%;
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 1rem;
+  justify-content: flex-start;
 }
 
