--- a/frontend/src/components/pages/Home/Home.module.scss
+++ b/frontend/src/components/pages/Home/Home.module.scss
@@ -1,10 +1,14 @@
 .Container {
-  display: flex;
-  width: 50%;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: flex-start;
+
+  .DateContainer {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: flex-start;
+  }
+
 }
 
