--- a/frontend/src/components/pages/ProfilePage/ProfilePage.module.scss
+++ b/frontend/src/components/pages/ProfilePage/ProfilePage.module.scss
@@ -1,7 +1,6 @@
 .Container {
   margin-top: 1%;
   display: flex;
-  gap: 0.5rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -16,7 +15,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
     width: 20%;
     min-width: 12.5rem;
 
@@ -28,7 +26,14 @@
       @apply focus:border-graySecondary;
     }
 
+    label {
+      margin-top: 1rem;
+      padding-left: 5px;
+      font-size: x-small;
+    }
+
     button {
+      margin-top: 2rem;
       width: 100%;
     }
   }
