--- a/frontend/src/components/pages/ProfilePage/ProfilePage.module.scss
+++ b/frontend/src/components/pages/ProfilePage/ProfilePage.module.scss
@@ -1,21 +1,22 @@
 .Container {
-  margin-top: 1%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 0.9rem;
+  font-size: 1rem;
+  width: 100%;
 
   p {
     @apply text-textLight;
   }
 
   form {
-    margin-top: 10px;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 20%;
+    gap: 1rem;
     min-width: 12.5rem;
 
     .Input {
@@ -27,13 +28,12 @@
     }
 
     label {
-      margin-top: 1rem;
-      padding-left: 5px;
+      padding-left: 0.5rem;
       font-size: x-small;
     }
 
     button {
-      margin-top: 2rem;
+      margin-top: 1rem;
       width: 100%;
     }
   }
