feat: add home page

--- a/frontend/src/components/ui/Table/Table.module.scss
+++ b/frontend/src/components/ui/Table/Table.module.scss
@@ -14,7 +14,7 @@
     div:last-child {
       @apply mt-4 sm:mt-0 sm:ml-16 sm:flex-none;
       button {
-        @apply inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:w-auto;
+        @apply inline-flex items-center justify-center rounded-md border border-transparent bg-primary px-4 py-2 text-sm font-medium text-white shadow-sm  focus:outline-none focus:ring-2  focus:ring-offset-2 sm:w-auto;
       }
     }
   }
@@ -22,13 +22,10 @@
   table {
     @apply min-w-full divide-y divide-gray-300;
     thead {
-      @apply bg-gray-50;
+      @apply bg-secondary;
 
       th {
         @apply px-3 py-3.5 text-left text-sm font-semibold text-gray-900;
-        span {
-          @apply sr-only;
-        }
       }
 
       th:first-child {
@@ -51,7 +48,7 @@
         @apply relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6;
 
         button {
-          @apply text-indigo-600  hover:text-indigo-900;
+          @apply text-accent;
         }
       }
     }
