--- a/frontend/src/components/ui/Table/Table.module.scss
+++ b/frontend/src/components/ui/Table/Table.module.scss
@@ -1,6 +1,15 @@
 .Container {
   @apply px-4 sm:px-6 lg:px-8;
 
+  .EmptyTable {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+  }
+
   .Header {
     @apply sm:flex sm:items-center;
 
