fix: random fixes

--- a/frontend/src/components/ui/Input/Input.module.scss
+++ b/frontend/src/components/ui/Input/Input.module.scss
@@ -2,11 +2,11 @@
   @apply relative z-0 w-full;
 
   input {
-    @apply pt-3 pb-2 block w-full px-4 mt-0 bg-transparent border border-2  appearance-none focus:outline-none focus:ring-0 focus:border-black border-gray-500 rounded;
+    @apply pt-3 pb-2 block w-full px-4 mt-0 bg-transparent border border-2  appearance-none focus:outline-none focus:ring-0 focus:border-black border-gray-500 rounded-md;
   }
 
   label {
-    @apply absolute top-3 ml-4 -z-1 bg-white duration-300 origin-0 text-gray-600;
+    @apply absolute top-3 ml-2 -z-1 bg-white duration-300 origin-0 text-gray-600;
   }
 
   small {
