--- a/frontend/src/components/ui/Button/Button.module.scss
+++ b/frontend/src/components/ui/Button/Button.module.scss
@@ -1,4 +1,5 @@
 .Container {
   @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm bg-primary text-sm font-medium text-white;
-  @apply hover:bg-graySecondary disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none disabled:cursor-not-allowed;
+  @apply hover:bg-neutral-800 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none disabled:cursor-not-allowed;
+  @apply hover:scale-105 ease-in-out duration-150;
 }
