--- a/frontend/src/components/pages/ProfilePage/ProfilePage.module.scss
+++ b/frontend/src/components/pages/ProfilePage/ProfilePage.module.scss
@@ -17,10 +17,9 @@
     justify-content: center;
     width: 20%;
     gap: 1.5rem;
-    min-width: 12.5rem;
+    min-width: 200px;
 
     button {
-      margin-top: 1rem;
       width: 100%;
     }
   }
