fix: random fixes

--- a/frontend/src/components/ui/Input/Input.module.scss
+++ b/frontend/src/components/ui/Input/Input.module.scss
@@ -2,7 +2,7 @@
   @apply relative z-0 w-full;
 
   input {
-    @apply py-1 block w-full shadow-lg px-4 mt-0 bg-transparent border border-2  appearance-none focus:outline-none focus:ring-0 focus:border-black border-gray-500 rounded-md;
+    @apply py-1 block w-full shadow-md px-4 mt-0 bg-transparent border border-2  appearance-none focus:outline-none focus:ring-0 focus:border-black border-gray-500 rounded-md;
   }
 
   label {
