feat: update office page props for office

--- a/frontend/src/components/ui/Office/Office.module.scss
+++ b/frontend/src/components/ui/Office/Office.module.scss
@@ -18,9 +18,9 @@
   background-color: #EEEEEE;
 
   svg {
-    width: 15%;
-    height: 15%;
-    @apply text-primary;
+    width: 10%;
+    height: 10%;
+    @apply text-primary py-10;
   }
 
 
