feat: add generic type to combo box

--- a/frontend/src/components/ui/Combobox/Combobox.module.scss
+++ b/frontend/src/components/ui/Combobox/Combobox.module.scss
@@ -1,3 +1,29 @@
 .Container {
   @apply fixed top-16 w-72;
+
+  .Wrapper {
+    @apply relative mt-1;
+
+
+    .InputContainer {
+      @apply relative w-full cursor-default overflow-hidden rounded-lg bg-white text-left shadow-md focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 focus-visible:ring-offset-2 focus-visible:ring-offset-teal-300 sm:text-sm;
+
+      .Input {
+        @apply w-full border-none py-2 pl-3 pr-10 text-sm leading-5 text-gray-900 focus:ring-0;
+      }
+
+      .Button {
+        @apply absolute inset-y-0 right-0 flex items-center pr-2;
+      }
+    }
+
+    .Options {
+      @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
+    }
+
+    .NoOptions {
+      @apply relative cursor-default select-none py-2 px-4 text-gray-700;
+    }
+
+  }
 }
