--- a/frontend/src/components/pages/Home/Home.module.scss
+++ b/frontend/src/components/pages/Home/Home.module.scss
@@ -6,8 +6,14 @@
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1rem;
     justify-content: flex-start;
+  }
+
+  .OfficeContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
 }
