--- a/frontend/src/components/ui/Office/Office.module.scss
+++ b/frontend/src/components/ui/Office/Office.module.scss
@@ -1,7 +1,5 @@
 .Container {
   display: inline-grid;
-  box-shadow: #CCDBE8 3px 3px 6px 0 inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
-  background-color: #EEEEEE;
   padding: 30px 50px;
   column-gap: 0;
 
@@ -11,11 +9,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 40%;
-  height: 50%;
   align-items: center;
-  box-shadow: #CCDBE8 3px 3px 6px 0 inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
-  background-color: #EEEEEE;
 
   svg {
     width: 10%;
@@ -28,4 +22,15 @@
     font-size: 1rem;
     @apply font-semibold;
   }
+}
+
+.Background {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #EEEEEE;
+  box-shadow: #CCDBE8 3px 3px 6px 0 inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  width: 100%;
+  min-height: 50%;
 }
