--- a/frontend/src/components/ui/FileInput/FileInput.module.scss
+++ b/frontend/src/components/ui/FileInput/FileInput.module.scss
@@ -1,20 +1,23 @@
 .Container {
   display: flex;
   flex-direction: row;
-  
+  width: 100%;
+
   .FileInput {
     display: flex;
     flex-direction: row;
+    width: 100%;
 
     span {
-      @apply w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-lg bg-primary text-sm font-medium text-white;
+      width: 35%;
+      @apply flex justify-center py-2 px-4 border border-transparent rounded-md shadow-lg bg-primary text-sm font-medium text-white;
       @apply rounded-r-none;
-      @apply hover:cursor-pointer;
+      @apply hover:cursor-pointer hover:bg-neutral-800;
     }
 
     input {
+      width: 65%;
       @apply hover:cursor-default rounded-r-md;
-      width: 100%;
     }
 
   }
