--- a/frontend/src/components/ui/Office/Office.module.scss
+++ b/frontend/src/components/ui/Office/Office.module.scss
@@ -10,6 +10,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  @apply font-medium text-textLight;
 
   svg {
     width: 10%;
