--- a/frontend/src/components/ui/Combobox/Combobox.module.scss
+++ b/frontend/src/components/ui/Combobox/Combobox.module.scss
@@ -1,15 +1,12 @@
 .Container {
-  @apply fixed top-16 w-72;
-
   .Wrapper {
     @apply relative mt-1;
-
 
     .InputContainer {
       @apply relative w-full cursor-default overflow-hidden rounded-lg bg-white text-left shadow-md focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 focus-visible:ring-offset-2 focus-visible:ring-offset-teal-300 sm:text-sm;
 
       .Input {
-        @apply w-full border-none py-2 pl-3 pr-10 text-sm leading-5 text-gray-900 focus:ring-0;
+        @apply py-1 block w-full shadow-md px-4 mt-0 bg-transparent border border-2  appearance-none focus:outline-none focus:ring-0 focus:border-black border-gray-500 rounded-md;
       }
 
       .Button {
@@ -18,7 +15,7 @@
     }
 
     .Options {
-      @apply absolute mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
+      @apply mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
     }
 
     .NoOptions {
