--- a/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
+++ b/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
@@ -1,18 +1,30 @@
 .Container {
-  svg {
-    @apply w-5 text-primary m-1 inline cursor-pointer;
-  }
+  div {
+    display: flex;
 
-  .Info {
-    @apply w-12 pt-3 inline;
+    div {
+      border-radius: 50%;
+      width: 0.75rem;
+      height: 0.75rem;
+      margin-top: 0.2rem;
+    }
+
+    p {
+      font-size: small;
+      margin-left: 0.2rem;
+      opacity: 70%;
+    }
   }
 
   .Available {
-    @apply bg-secondary mr-1.5 inline text-xs p-1 rounded;
-
+    @apply bg-primary;
   }
 
   .Unavailable {
-    @apply bg-primary inline text-xs text-accent p-1 rounded;
+    @apply bg-reserved;
+  }
+
+  .Yours {
+    @apply bg-accent;
   }
 }
