--- a/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
+++ b/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
@@ -1,7 +1,7 @@
 .Container {
   position: absolute;
   top: 26rem;
-  left: 2rem;
+  left: 1.5rem;
 
   @media only screen and (min-width: 640px) {
     top: 27rem;
@@ -10,7 +10,7 @@
 
   @media only screen and (min-width: 768px) {
     top: 27rem;
-    left: 18rem;
+    left: 17.5rem;
   }
   div {
     display: flex;
@@ -38,6 +38,7 @@
   }
 
   .Yours {
-    @apply bg-accent;
+    border: 2px solid;
+    @apply bg-accent border-reserved;
   }
 }
