--- a/frontend/src/components/ui/Combobox/Combobox.module.scss
+++ b/frontend/src/components/ui/Combobox/Combobox.module.scss
@@ -1,26 +1,17 @@
-.Container {
-  .Wrapper {
-    @apply relative mt-1;
 
-    .InputContainer {
-      @apply relative w-full cursor-default overflow-hidden rounded-lg bg-white text-left shadow-md focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 focus-visible:ring-offset-2 focus-visible:ring-offset-teal-300 sm:text-sm;
+.Input {
+  @apply w-full rounded-md border border-gray-300 bg-white py-2 pl-3 pr-10 shadow-md  focus:outline-none focus:ring-0 focus:border-black sm:text-sm;
+  @apply block w-full bg-transparent appearance-none;
+}
 
-      .Input {
-        @apply py-1 block w-full shadow-md px-4 mt-0 bg-transparent border border-2  appearance-none focus:outline-none focus:ring-0 focus:border-black border-gray-500 rounded-md;
-      }
+.Label {
+  @apply absolute top-1.5 ml-2 -z-1 bg-transparent duration-300 origin-0 text-gray-600;
+}
 
-      .Button {
-        @apply absolute inset-y-0 right-0 flex items-center pr-2;
-      }
-    }
+.Button {
+  @apply absolute inset-y-0 right-0 flex items-center rounded-r-md px-2 focus:outline-none;
+}
 
-    .Options {
-      @apply mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
-    }
-
-    .NoOptions {
-      @apply relative cursor-default select-none py-2 px-4 text-gray-700;
-    }
-
-  }
+.Options {
+  @apply absolute z-10 mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none sm:text-sm;
 }
