--- a/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
+++ b/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
@@ -1,17 +1,7 @@
 .Container {
   position: absolute;
-  top: 26rem;
-  left: 1.5rem;
+  @apply pt-2 pl-2;
 
-  @media only screen and (min-width: 640px) {
-    top: 27rem;
-    left: 2rem;
-  }
-
-  @media only screen and (min-width: 768px) {
-    top: 27rem;
-    left: 17.5rem;
-  }
   div {
     display: flex;
 
