--- a/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
+++ b/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
@@ -1,6 +1,9 @@
 .Container {
+  position: absolute;
+  top: 0;
+  left: 0;
   @apply pt-2 pl-2;
-  align-self: flex-start;
+
 
   div {
     display: flex;
