fix: modal position

--- a/frontend/src/components/ui/ModalProvider/ModalProvider.module.scss
+++ b/frontend/src/components/ui/ModalProvider/ModalProvider.module.scss
@@ -14,9 +14,8 @@
 }
 
 .Container {
-  // from old project
-  //@apply justify-center flex overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none;
-  //  margin-top: 15%;
+  @apply justify-center flex overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none;
+   margin-top: 10%;
 }
 
 .BackdropAnimateIn {
