--- a/frontend/src/components/ui/DeleteModal/DeleteModal.module.scss
+++ b/frontend/src/components/ui/DeleteModal/DeleteModal.module.scss
@@ -10,7 +10,7 @@
     }
 
     .Body {
-      @apply text-sm text-gray-700 relative py-2 px-6 flex-auto m-auto
+      @apply text-sm text-gray-700 relative py-2 px-6 text-center;
     }
 
     .Icon {
