--- a/frontend/src/components/ui/Breadcrumbs/BreadcrumbItem/BreadcrumbItem.module.scss
+++ b/frontend/src/components/ui/Breadcrumbs/BreadcrumbItem/BreadcrumbItem.module.scss
@@ -1,20 +1,11 @@
 .Container {
   @apply flex items-center;
 
-  .Test {
+  .Icon {
     @apply flex-shrink-0 h-3 w-3 text-gray-400;
   }
 
   .Link {
     @apply ml-1 md:ml-3 text-sm font-medium text-gray-500 hover:text-gray-700 xs:text-xs;
   }
-
-
-  //svg {
-  //  @apply flex-shrink-0 h-5 w-3 text-gray-400;
-  //}
-  //
-  //.Link {
-  //  @apply sm:ml-0.5 md:ml-3 text-sm font-medium text-gray-500 hover:text-gray-700 w-14;
-  //}
 }
