--- a/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
+++ b/frontend/src/components/ui/OfficeLegend/OfficeLegend.module.scss
@@ -19,9 +19,9 @@
     }
 
     p {
-      font-size: 67%;
+      font-size: 0.6rem;
       margin-left: 0.2rem;
-      opacity: 62%;
+      opacity: 60%;
       @media only screen and (min-width: 768px) {
         font-size: 80%;
       }
