--- a/frontend/src/components/ui/Carousel/Carousel.module.css
+++ b/frontend/src/components/ui/Carousel/Carousel.module.css
@@ -1,3 +1,21 @@
 .Container {
-    @apply sm:w-full md:w-full lg:w-full;
+    @apply mx-5 ;
+}
+.WidthFull {
+    @apply  w-full
+}
+.Arrow {
+    font-size: 60px;
+    position: absolute;
+    cursor: pointer;
+    z-index: 10;
+}
+.Next {
+    right: -1.5rem;
+    top: 45%;
+}
+.Prev {
+    left: -1.5rem;
+    top: 45%;
+    transform: rotate(180deg);
 }
