--- a/frontend/src/components/ui/ReservationModal/ReservationModal.module.scss
+++ b/frontend/src/components/ui/ReservationModal/ReservationModal.module.scss
@@ -14,7 +14,7 @@
 
       p {
         text-align: left;
-        padding-left: 60px;
+        padding-left: 3.75rem;
       }
     }
 
@@ -41,13 +41,13 @@
     }
 
     form {
-      margin-top: 4px;
+      margin-top: 0.5rem;
     }
 
     .Input {
       margin: auto;
       width: 70%;
-      padding: 10px;
+      padding: 0.625rem;
       text-align: left;
     }
 
