--- a/frontend/src/components/ui/Carousel/Carousel.module.scss
+++ b/frontend/src/components/ui/Carousel/Carousel.module.scss
@@ -5,7 +5,7 @@
     @apply  w-full
 }
 .Arrow {
-    font-size: 60px;
+    font-size: 3.75rem;
     position: absolute;
     cursor: pointer;
     z-index: 10;
