--- a/frontend/src/components/ui/Table/Table.module.scss
+++ b/frontend/src/components/ui/Table/Table.module.scss
@@ -16,7 +16,7 @@
     div:first-child {
       @apply sm:flex-auto;
       h1 {
-        @apply text-xl font-semibold text-gray-900;
+        @apply text-lg font-semibold text-gray-900;
       }
     }
 
