--- a/frontend/src/components/ui/Workspace/Workspace.module.scss
+++ b/frontend/src/components/ui/Workspace/Workspace.module.scss
@@ -23,8 +23,8 @@
   bottom: 5%;
   transform: translate(-25%,-5%);
   z-index: 20;
-  font-size: 0.6rem;
-  @apply text-textLight
+  font-size: 0.55rem;
+  @apply text-textLight hidden sm:block
 }
 
 .TimeTop {
