--- a/frontend/src/components/pages/SettingsPage/SettingsPage.module.scss
+++ b/frontend/src/components/pages/SettingsPage/SettingsPage.module.scss
@@ -7,8 +7,8 @@
   width: 100%;
 
   .Title {
-    font-size: 1.25rem;
-    @apply font-semibold;
+    font-size: 1rem;
+    @apply font-semibold text-primary mt-3;
   }
 
   p {
