--- a/frontend/src/components/pages/OfficePage/OfficePage.module.scss
+++ b/frontend/src/components/pages/OfficePage/OfficePage.module.scss
@@ -3,6 +3,11 @@
   flex-direction: column;
   gap: 1rem;
 
+  h1 {
+    font-size: 1rem;
+    @apply font-semibold text-primary mb-1;
+  }
+
   .DateContainer {
     display: flex;
     width: 100%;
