--- a/frontend/src/components/ui/Table/Table.module.scss
+++ b/frontend/src/components/ui/Table/Table.module.scss
@@ -16,7 +16,8 @@
     div:first-child {
       @apply sm:flex-auto;
       h1 {
-        @apply text-lg font-semibold text-gray-900;
+        font-size: 1rem;
+        @apply font-semibold text-primary mb-1;
       }
     }
 
