--- a/frontend/src/components/ui/Breadcrumbs/BreadcrumbItem/BreadcrumbItem.module.scss
+++ b/frontend/src/components/ui/Breadcrumbs/BreadcrumbItem/BreadcrumbItem.module.scss
@@ -6,6 +6,6 @@
   }
 
   .Link {
-    @apply ml-1 md:ml-3 text-sm font-medium text-gray-500 hover:text-gray-700 xs:text-xs;
+    @apply ml-1 md:ml-3 text-sm font-medium text-gray-500 hover:text-gray-700 xs:text-xs capitalize;
   }
 }
